inicializando a classificação
