# doc/openapi.yaml
@@ -1,16 +1,15 @@
 openapi: 3.0.3
 info:
-  title: Projeto do SENAI Jandira - Professor Marcel
+  title: Projeto Controle de filmes SENAI Jandira - Matheus Henry
   description: |-
-   API destinada a controle de filmes para o projeto do senai
+   API destinada a controle de filmes para o projeto bem legal do SENAI
   termsOfService: http://swagger.io/terms/
-  contact:
-    email: seunome@email.com
+  contact:  
+    email: 09matheushenry@gmail.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.4.26
-
+  version: 1.0.0
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
@@ -20,26 +19,30 @@ paths:
   /v1/senai/locadora/filme:
     post:
       tags:
-        - aluno
-      summary: Adiciona um novo Aluno
-      description: Adiciona um novo Aluno
+        - Filme
+      summary: Adiciona um novo Filme
+      description: End point para enviar os dados do filme a serem cadastrados
       requestBody:
-        description: JSON contendo os dados do anovo aluno a ser inserido no sistema
+        description: JSON contendo os dados do novo Filme a ser inserido no sistema
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Aluno'
+              $ref: '#/components/schemas/Filme'
         required: true
       responses:
         '201':
           description: Successful operation
         '400':
           description: Invalid input
+        '415':
+          description: Invalid Content-Type
+        '500':
+          description: Error internal Server (Controller / model)
     get:
       tags:
-        - aluno
-      summary: Lista todos os alunos
-      description: Listagem de todos os alunos registrados no sistema
+        - Filme
+      summary: Lista todos os Filmes
+      description: Listagem de todos os Filme registrados no sistema
       responses:
         '200':
           description: successful operation
@@ -48,22 +51,24 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Aluno'          
+                  $ref: '#/components/schemas/Filme'          
            
         '404':
           description: Not Found
-  /v1/aluno/{id}:
+        '500':
+          description: Error Internal Server (Controller/Model)
+  /v1/senai/locadora/filme/{id}:
     get:
       tags:
-        - aluno
-      summary: Busca um aluno prlo ID
-      description: Retorna um aluno pelo ID
+        - Filme
+      summary: Busca um Filme pelo ID
+      description: Retorna um Filme pelo ID
       parameters:
         - name: id
           in: path
-          description: ID of pet to return
+          description: ID para realizar a busca do filme
           required: true
-          schema:
+          schema: 
             type: integer
             format: int64
       responses:
@@ -72,30 +77,32 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Aluno'          
+                $ref: '#/components/schemas/Filme'          
         '400':
           description: Invalid ID supplied
         '404':
-          description: Pet not found
+          description: Not found
+        '500':
+          description: Error internal server (Controller/Model)
     put:
       tags:
-        - aluno
-      summary: Update an existing pet
-      description: Update an existing pet by Id
+        - Filme
+      summary: Atualiza um filme pelo id
+      description: Buscar e atualizasr um Filme pelo id
       parameters:
         - name: id
           in: path
-          description: ID of pet to return
+          description: ID para realizar a busca do filme
           required: true
           schema:
             type: integer
             format: int64
       requestBody:
-        description: Update an existent pet in the store
+        description: Dados para atualizar um Filme
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Aluno'
+              $ref: '#/components/schemas/Filme'
         required: true
       responses:
         '200':
@@ -103,13 +110,16 @@ paths:
         '400':
           description: Invalid ID supplied
         '404':
-          description: Pet not found
-       
+          description: Not found
+        '415':
+          description: Invalid content type
+        '500':
+          description: Error Internal Server (Controller/Model)
     delete:
       tags:
-        - aluno
-      summary: Delete aluno
-      description: Excluir um aluno
+        - Filme
+      summary: Delete Filme
+      description: Excluir um Filme
       parameters:
         - name: id
           in: path
@@ -119,32 +129,43 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '204':
           description: successful operation
         '400':
           description: Invalid ID supplied
         '404':
           description: Pet not found
+        '500': Error Internal Server (Controller/Model)
 components:
   schemas:
-    Aluno:
+    Filme:
       required:
         - nome
+        - sinopse
+        - data_lancamento
       type: object
       properties:
         id:
           type: integer
         nome:
           type: string
-        celular:
+        sinopse:
           type: string
-        email:
+        data_lancamento:
           type: string
+        duracao:
+          type: string
+        capa:
+          type: string
+        valor:
+          type: integer
+        avaliacao:
+          type: integer
   requestBodies:
-    Aluno:
+    Filme:
       description: Objeto que deve ser enviado no Body das requisicoes
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Aluno'
+            $ref: '#/components/schemas/Filme'
     
